# hoarder

./: .gitattributes  LICENSE-MIT  README.md  compose.yaml  docker-bake.hcl
.github/: dependabot.yml  renovate.json
api/: .dockerignore  Cargo.toml  Dockerfile  Makefile.toml  rustfmt.toml
api/crates/application/: Cargo.toml
api/crates/application/src/: commands.rs  error.rs  lib.rs  server.rs  service.rs  tests.rs
api/crates/application/src/service/: graphql.rs  media.rs  objects.rs  thumbnails.rs
api/crates/application/src/tests/: graphql.rs  objects.rs  server.rs  service.rs  thumbnails.rs
api/crates/application/tests/: app.rs  graphql.rs  objects.rs  thumbnails.rs
api/crates/config/: Cargo.toml
api/crates/config/src/: env.rs
api/crates/core/: env.rs  main.rs
api/crates/core/di/: container.rs
api/crates/core/env/: commands.rs  trace.rs
api/crates/domain/: Cargo.toml
api/crates/domain/src/: error.rs  io.rs  iter.rs  lib.rs  repository.rs  service.rs  tests.rs
api/crates/domain/src/entity/: external_services.rs  media.rs  objects.rs  replicas.rs  sources.rs  tag_types.rs  tags.rs
api/crates/domain/src/parser/: media.rs  thumbnails.rs
api/crates/domain/src/processor/: media.rs
api/crates/domain/src/repository/: external_services.rs  media.rs  objects.rs  replicas.rs  sources.rs  tag_types.rs  tags.rs
api/crates/domain/src/service/: external_services.rs  media.rs  tags.rs
api/crates/domain/src/tests/: entity.rs  error.rs  repository.rs  service.rs  tags.rs
api/crates/domain/tests/: external_services.rs  media.rs  tags.rs
api/crates/graphql/: Cargo.toml
api/crates/graphql/src/: error.rs  external_services.rs  lib.rs  media.rs  mutation.rs  objects.rs  query.rs  replicas.rs  sources.rs  subscription.rs  tags.rs  tests.rs
api/crates/graphql/src/tests/: media.rs  mocks.rs  mutation.rs  query.rs  sources.rs  subscription.rs  tags.rs
api/crates/graphql/tests/: all_external_services.rs  all_media-first.rs  all_media-last.rs  all_media-with.rs  all_media.rs  all_sources_like.rs  all_tag_types.rs  all_tags.rs  all_tags_like.rs  external_services.rs  media-with.rs  media.rs  mutation-attach_tag.rs  mutation-create_external_service.rs  mutation-create_medium.rs  mutation-create_replica.rs  mutation-create_source.rs  mutation-create_tag.rs  mutation-create_tag_type.rs  mutation-delete_external_service.rs  mutation-delete_medium.rs  mutation-delete_replica.rs  mutation-delete_source.rs  mutation-delete_tag.rs  mutation-delete_tag_type.rs  mutation-detach_tag.rs  mutation-update_external_service.rs  mutation-update_medium.rs  mutation-update_replica.rs  mutation-update_source.rs  mutation-update_tag.rs  mutation-update_tag_type.rs  query-all_media-first.rs  query-all_media-with.rs  query-all_sources_like.rs  query-all_tag_types.rs  query-all_tags.rs  query-all_tags_like.rs  query-media-with.rs  query-media.rs  (+11 more)
api/crates/graphql/tests/mocks/: mod.rs
api/crates/media/: Cargo.toml
api/crates/media/src/: lib.rs  parser.rs  tests.rs
api/crates/normalizer/: Cargo.toml
api/crates/normalizer/src/: kana.rs  lib.rs  tests.rs  unicode.rs
api/crates/normalizer/src/tests/: kana.rs  unicode.rs
api/crates/objects/: Cargo.toml
api/crates/objects/src/: http.rs  lib.rs  tests.rs
api/crates/objects/src/tests/: mocks.rs
api/crates/postgres/: Cargo.toml
api/crates/postgres/src/: expr.rs  external_services.rs  lib.rs  media.rs  migrations.rs  replicas.rs  sources.rs  tag_types.rs  tags.rs
api/crates/postgres/src/expr/: aggregate.rs  array.rs  conditional.rs  distinct.rs  notify.rs  string.rs
api/crates/postgres/src/migrations/: v1.rs  v2.rs  v3.rs  v4.rs  v5.rs  v6.rs  v7.rs  v8.rs  v9.rs
api/crates/postgres/src/tests/: sources.rs
api/crates/postgres/tests/: external_services-create.rs  external_services-delete_by_id.rs  external_services-fetch_all.rs  external_services-fetch_by_ids.rs  external_services-update_by_id.rs  external_services.rs  media-create.rs  media-delete_by_id.rs  media-fetch_all-with-replicas.rs  media-fetch_all-with-sources.rs  media-fetch_all-with-tags.rs  media-fetch_all.rs  media-fetch_by_ids-with-replicas.rs  media-fetch_by_ids-with-sources.rs  media-fetch_by_ids-with-tags.rs  media-fetch_by_ids.rs  media-fetch_by_source_ids-with-replicas.rs  media-fetch_by_source_ids-with-sources.rs  media-fetch_by_source_ids-with-tags.rs  media-fetch_by_source_ids.rs  media-fetch_by_tag_ids-with-replicas.rs  media-fetch_by_tag_ids-with-sources.rs  media-fetch_by_tag_ids-with-tags.rs  media-fetch_by_tag_ids.rs  media-update_by_id.rs  media-watch_by_id.rs  media.rs  replicas-create.rs  replicas-delete_by_id.rs  replicas-fetch_by_ids.rs  replicas-fetch_by_original_url.rs  replicas-fetch_thumbnail_by_id.rs  replicas-update_by_id.rs  replicas.rs  sources-create.rs  sources-delete_by_id.rs  sources-fetch_by_external_metadata.rs  sources-fetch_by_external_metadata_like_id.rs  sources-fetch_by_ids.rs  sources-update_by_id.rs  (+18 more)
api/crates/postgres/tests/common/: mod.rs
api/crates/query/: Cargo.toml
api/crates/query/src/: lib.rs  tests.rs
api/crates/storage/: Cargo.toml
api/crates/storage/src/: filesystem.rs  lib.rs
api/crates/thumbnails/: Cargo.toml
api/crates/thumbnails/src/: lib.rs  parser.rs  processor.rs
api/scripts/: setup-postgres.bash
api/src/: lib.rs  main.rs
api/src/application/: mod.rs  server.rs
api/src/application/graphql/: external_services.rs  media.rs  mod.rs  mutation.rs  query.rs  replicas.rs  sources.rs  tags.rs
api/src/application/thumbnails/: mod.rs
api/src/di/: container.rs
api/src/domain/entity/: external_services.rs  job_runs.rs  jobs.rs  media.rs  mod.rs  replicas.rs  sources.rs  tag_types.rs  tags.rs
api/src/domain/repository/: external_services.rs  jobs.rs  media.rs  mod.rs  replicas.rs  sources.rs  tag_types.rs  tags.rs
api/src/domain/service/: external_services.rs  media.rs  mod.rs  tags.rs
api/src/infrastructure/: mod.rs
api/src/infrastructure/config/: env.rs
api/src/infrastructure/repository/: external_services.rs  media.rs  mod.rs  replicas.rs  sources.rs  tag_types.rs  tags.rs
(+800 files in other folders)
