[package]
name = "hoarder"
version = "0.8.4"
authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "hoarder"
path = "crates/core/main.rs"

[workspace]
members = [
    "crates/application",
    "crates/domain",
    "crates/graphql",
    "crates/media",
    "crates/normalizer",
    "crates/objects",
    "crates/postgres",
    "crates/storage",
    "crates/thumbnails",
]

[workspace.package]
authors = ["Chitoku <odango@chitoku.jp>"]
license = "MIT OR Apache-2.0"
edition = "2021"

[workspace.dependencies.application]
path = "crates/application"

[workspace.dependencies.domain]
path = "crates/domain"

[workspace.dependencies.graphql]
path = "crates/graphql"

[workspace.dependencies.media]
path = "crates/media"

[workspace.dependencies.normalizer]
path = "crates/normalizer"

[workspace.dependencies.objects]
path = "crates/objects"

[workspace.dependencies.postgres]
path = "crates/postgres"

[workspace.dependencies.storage]
path = "crates/storage"

[workspace.dependencies.thumbnails]
path = "crates/thumbnails"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1

[profile.dev.package."*"]
opt-level = 3
debug = false

[features]
default = ["jemallocator", "tls"]
jemallocator = ["tikv-jemallocator", "tikv-jemallocator/unprefixed_malloc_on_supported_platforms"]
tls = ["application/tls", "postgres/tls"]

[dependencies.application]
workspace = true

[dependencies.domain]
workspace = true

[dependencies.graphql]
workspace = true

[dependencies.media]
workspace = true

[dependencies.normalizer]
workspace = true

[dependencies.objects]
workspace = true

[dependencies.postgres]
workspace = true

[dependencies.storage]
workspace = true

[dependencies.thumbnails]
workspace = true

[dependencies.anyhow]
version = "1.0.95"

[dependencies.clap]
version = "4.5.27"
features = ["cargo", "derive", "env", "error-context", "string"]

[dependencies.env_logger]
version = "0.11.6"

[dependencies.icu_collator]
version = "1.5.0"
features = ["std"]

[dependencies.icu_locid]
version = "1.5.0"
features = ["std"]

[dependencies.icu_provider]
version = "1.5.0"
features = ["std", "sync"]

[dependencies.log]
version = "0.4.25"

[dependencies.tikv-jemallocator]
version = "0.6.0"
optional = true

[dependencies.tokio]
version = "1.43.0"

[dependencies.tokio-util]
version = "0.7.13"
features = ["rt"]
