[package]
name = "hoarder"
version = "0.8.4"
authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "hoarder"
path = "crates/core/main.rs"

[workspace]
members = [
    "crates/application",
    "crates/domain",
    "crates/graphql",
    "crates/media",
    "crates/normalizer",
    "crates/objects",
    "crates/postgres",
    "crates/storage",
    "crates/thumbnails",
]

[workspace.package]
authors = ["Chitoku <odango@chitoku.jp>"]
license = "MIT OR Apache-2.0"
edition = "2024"

[workspace.dependencies.application]
path = "crates/application"

[workspace.dependencies.domain]
path = "crates/domain"

[workspace.dependencies.graphql]
path = "crates/graphql"

[workspace.dependencies.media]
path = "crates/media"

[workspace.dependencies.normalizer]
path = "crates/normalizer"

[workspace.dependencies.objects]
path = "crates/objects"

[workspace.dependencies.postgres]
path = "crates/postgres"

[workspace.dependencies.storage]
path = "crates/storage"

[workspace.dependencies.thumbnails]
path = "crates/thumbnails"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1

[profile.dev.package."*"]
debug = false

[features]
default = ["jemallocator", "tls"]
jemallocator = ["dep:tikv-jemallocator", "tikv-jemallocator/unprefixed_malloc_on_supported_platforms"]
tls = ["application/tls", "postgres/tls"]

[dependencies.application]
workspace = true

[dependencies.domain]
workspace = true

[dependencies.graphql]
workspace = true

[dependencies.media]
workspace = true

[dependencies.normalizer]
workspace = true

[dependencies.objects]
workspace = true

[dependencies.postgres]
workspace = true

[dependencies.storage]
workspace = true

[dependencies.thumbnails]
workspace = true

[dependencies.anstream]
version = "0.6.19"

[dependencies.anyhow]
version = "1.0.98"

[dependencies.clap]
version = "4.5.43"
features = ["cargo", "derive", "env", "error-context", "string"]

[dependencies.icu_collator]
version = "2.0.0"

[dependencies.icu_locale_core]
version = "2.0.0"

[dependencies.tikv-jemallocator]
version = "0.6.0"
optional = true

[dependencies.tokio]
version = "1.45.1"

[dependencies.tokio-util]
version = "0.7.15"
features = ["rt"]

[dependencies.tracing]
version = "0.1.41"

[dependencies.tracing-subscriber]
version = "0.3.19"
features = ["env-filter"]
