[package]
name = "application"
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
doctest = false

[features]
tls = ["axum-server/tls-openssl"]
test-mock = ["mockall"]

[dependencies.domain]
workspace = true

[dependencies.axum]
version = "0.7.9"

[dependencies.axum-server]
version = "0.7.1"

[dependencies.derive_more]
version = "1.0.0"

[dependencies.log]
version = "0.4.22"

[dependencies.mockall]
version = "0.13.1"
optional = true

[dependencies.notify]
version = "7.0.0"

[dependencies.serde]
version = "1.0.217"

[dependencies.thiserror]
version = "2.0.10"

[dependencies.tokio]
version = "1.43.0"
features = ["macros", "net", "process", "rt-multi-thread", "signal"]

[dev-dependencies.futures]
version = "0.3.31"

[dev-dependencies.hyper]
version = "1.5.2"

[dev-dependencies.indoc]
version = "2.0.5"

[dev-dependencies.pretty_assertions]
version = "1.4.1"

[dev-dependencies.serde_json]
version = "1.0.135"

[dev-dependencies.tower]
version = "0.5.2"
features = ["util"]
