[package]
name = "application"
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
doctest = false

[features]
tls = ["axum-server/tls-openssl"]

[dependencies.domain]
workspace = true

[dependencies.axum]
version = "0.8.4"

[dependencies.axum-server]
version = "0.7.2"

[dependencies.derive_more]
version = "2.0.1"

[dependencies.notify]
version = "8.1.0"

[dependencies.serde]
version = "1.0.219"

[dependencies.thiserror]
version = "2.0.12"

[dependencies.tokio]
version = "1.45.1"
features = ["macros", "net", "process", "rt-multi-thread", "signal"]

[dependencies.tower-http]
version = "0.6.6"
features = ["trace"]

[dependencies.tracing]
version = "0.1.41"

[dev-dependencies.futures]
version = "0.3.31"
features = ["std"]
default-features = false

[dev-dependencies.hyper]
version = "1.6.0"

[dev-dependencies.indoc]
version = "2.0.6"

[dev-dependencies.mockall]
version = "0.13.1"

[dev-dependencies.pretty_assertions]
version = "1.4.1"

[dev-dependencies.serde_json]
version = "1.0.141"

[dev-dependencies.tower]
version = "0.5.2"
features = ["util"]

[dev-dependencies.tungstenite]
version = "0.27.0"
