[package]
name = "application"
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
doctest = false

[features]
tls = ["axum-server/tls-openssl"]

[dependencies.domain]
workspace = true

[dependencies.axum]
version = "0.8.7"

[dependencies.axum-server]
version = "0.8.0"

[dependencies.derive_more]
version = "2.1.0"

[dependencies.notify]
version = "8.2.0"

[dependencies.serde]
version = "1.0.228"

[dependencies.thiserror]
version = "2.0.17"

[dependencies.tokio]
version = "1.48.0"
features = ["macros", "net", "process", "rt-multi-thread", "signal"]

[dependencies.tower-http]
version = "0.6.8"
features = ["trace"]

[dependencies.tracing]
version = "0.1.44"

[dev-dependencies.futures]
version = "0.3.31"
features = ["std"]
default-features = false

[dev-dependencies.hyper]
version = "1.8.1"

[dev-dependencies.indoc]
version = "2.0.7"

[dev-dependencies.mockall]
version = "0.14.0"

[dev-dependencies.pretty_assertions]
version = "1.4.1"

[dev-dependencies.serde_json]
version = "1.0.145"

[dev-dependencies.tower]
version = "0.5.2"
features = ["util"]

[dev-dependencies.tungstenite]
version = "0.28.0"
