[package]
name = "config"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
doctest = false

[dependencies.anyhow]
version = "1.0.71"

[dependencies.envy]
version = "0.4.2"

[dependencies.serde]
version = "1.0.169"
features = ["derive"]

[dependencies.thiserror]
version = "1.0.40"
