[package]
name = "domain"
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
doctest = false

[dependencies.chrono]
version = "0.4.44"
features = ["clock", "std"]
default-features = false

[dependencies.derive_more]
version = "2.1.1"
features = ["constructor", "deref", "display", "from"]

[dependencies.futures]
version = "0.3.32"
features = ["std"]
default-features = false

[dependencies.indenter]
version = "0.3.4"

[dependencies.ordermap]
version = "1.1.0"

[dependencies.percent-encoding]
version = "2.3.2"

[dependencies.regex]
version = "1.12.3"

[dependencies.serde]
version = "1.0.228"
features = ["derive"]

[dependencies.strum]
version = "0.27.2"
features = ["derive"]

[dependencies.thiserror]
version = "2.0.18"

[dependencies.tokio]
version = "1.49.0"
features = ["macros", "rt-multi-thread"]

[dependencies.tokio-util]
version = "0.7.18"
features = ["io-util"]

[dependencies.tracing]
version = "0.1.44"

[dependencies.uuid]
version = "1.21.0"
features = ["serde", "v4"]

[dev-dependencies.anyhow]
version = "1.0.102"

[dev-dependencies.indoc]
version = "2.0.7"

[dev-dependencies.mockall]
version = "0.14.0"

[dev-dependencies.pretty_assertions]
version = "1.4.1"
features = ["unstable"]

[dev-dependencies.serial_test]
version = "3.4.0"
