[package]
name = "graphql"
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
doctest = false

[dependencies.application]
workspace = true

[dependencies.domain]
workspace = true

[dependencies.async-graphql]
version = "7.0.15"
features = ["chrono", "custom-error-conversion", "graphiql", "tempfile", "tracing", "unblock", "uuid"]
default-features = false

[dependencies.async-graphql-axum]
version = "7.0.15"

[dependencies.axum]
version = "0.8.1"

[dependencies.base64]
version = "0.22.1"

[dependencies.chrono]
version = "0.4.40"
features = ["clock", "serde", "std"]
default-features = false

[dependencies.derive_more]
version = "2.0.1"
features = ["constructor"]

[dependencies.futures]
version = "0.3.31"
features = ["std"]
default-features = false

[dependencies.normalizer]
workspace = true

[dependencies.ordermap]
version = "0.5.6"

[dependencies.serde]
version = "1.0.219"
features = ["derive"]

[dependencies.serde_json]
version = "1.0.140"

[dependencies.thiserror]
version = "2.0.12"

[dependencies.tokio-util]
version = "0.7.14"
features = ["rt"]

[dependencies.tower-service]
version = "0.3.3"

[dependencies.tracing]
version = "0.1.41"

[dependencies.tracing-futures]
version = "0.2.5"
features = ["futures-03"]

[dependencies.uuid]
version = "1.16.0"

[dev-dependencies.application]
workspace = true

[dev-dependencies.indoc]
version = "2.0.6"

[dev-dependencies.mockall]
version = "0.13.1"

[dev-dependencies.pretty_assertions]
version = "1.4.1"

[dev-dependencies.tempfile]
version = "3.19.1"

[dev-dependencies.tokio]
version = "1.44.1"
features = ["macros", "rt-multi-thread"]
