[package]
name = "graphql"
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
doctest = false

[dependencies.application]
workspace = true

[dependencies.domain]
workspace = true

[dependencies.async-graphql]
version = "7.1.0"
features = ["chrono", "custom-error-conversion", "graphiql", "tempfile", "tracing", "unblock", "uuid"]
default-features = false

[dependencies.async-graphql-axum]
version = "7.1.0"
features = ["tracing"]

[dependencies.axum]
version = "0.8.8"

[dependencies.base64]
version = "0.22.1"

[dependencies.chrono]
version = "0.4.43"
features = ["clock", "serde", "std"]
default-features = false

[dependencies.derive_more]
version = "2.1.1"
features = ["constructor"]

[dependencies.either]
version = "1.15.0"

[dependencies.futures]
version = "0.3.31"
features = ["std"]
default-features = false

[dependencies.normalizer]
workspace = true

[dependencies.ordermap]
version = "1.1.0"

[dependencies.query]
workspace = true

[dependencies.serde]
version = "1.0.228"
features = ["derive"]

[dependencies.serde_json]
version = "1.0.149"

[dependencies.thiserror]
version = "2.0.18"

[dependencies.tokio]
version = "1.49.0"
features = ["fs", "io-std"]

[dependencies.tokio-util]
version = "0.7.18"
features = ["rt"]

[dependencies.tower-service]
version = "0.3.3"

[dependencies.tracing]
version = "0.1.44"

[dependencies.tracing-futures]
version = "0.2.5"
features = ["futures-03"]

[dependencies.uuid]
version = "1.19.0"

[dev-dependencies.application]
workspace = true

[dev-dependencies.indoc]
version = "2.0.7"

[dev-dependencies.mockall]
version = "0.14.0"

[dev-dependencies.pretty_assertions]
version = "1.4.1"

[dev-dependencies.tempfile]
version = "3.24.0"

[dev-dependencies.tokio]
version = "1.49.0"
features = ["macros", "rt-multi-thread"]
