[package]
name = "media"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
doctest = false

[dependencies.application]
workspace = true

[dependencies.domain]
workspace = true

[dependencies.anyhow]
version = "1.0.79"

[dependencies.async-trait]
version = "0.1.77"

[dependencies.derive_more]
version = "0.99.17"

[dependencies.image]
version = "0.24.8"

[dependencies.regex]
version = "1.10.3"

[dependencies.tokio]
version = "1.35.1"
features = ["rt-multi-thread"]
