[package]
name = "normalizer"
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
doctest = false

[dependencies.derive_more]
version = "1.0.0"
features = ["constructor"]

[dependencies.icu_normalizer]
version = "1.5.0"

[dependencies.icu_provider]
version = "1.5.0"
features = ["sync"]

[dependencies.phf]
version = "0.11.3"
features = ["macros"]

[dev-dependencies.pretty_assertions]
version = "1.4.1"
features = ["unstable"]
