[package]
name = "normalizer"
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
doctest = false

[dependencies.derive_more]
version = "2.0.1"
features = ["constructor"]

[dependencies.icu_normalizer]
version = "2.0.0"

[dependencies.icu_provider]
version = "2.0.0"
features = ["sync"]

[dependencies.phf]
version = "0.11.3"
features = ["macros"]

[dev-dependencies.pretty_assertions]
version = "1.4.1"
features = ["unstable"]
