[package]
name = "normalizer"
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
doctest = false

[dependencies.derive_more]
version = "2.1.1"
features = ["constructor"]

[dependencies.icu_normalizer]
version = "2.1.1"

[dependencies.icu_provider]
version = "2.1.1"
features = ["sync"]

[dependencies.phf]
version = "0.13.1"
features = ["macros"]

[dev-dependencies.pretty_assertions]
version = "1.4.1"
features = ["unstable"]
