[package]
name = "objects"
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
doctest = false

[dependencies.application]
workspace = true

[dependencies.domain]
workspace = true

[dependencies.axum]
version = "0.8.4"

[dependencies.derive_more]
version = "2.0.1"
features = ["constructor"]

[dependencies.tracing]
version = "0.1.41"
