[package]
name = "objects"
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
doctest = false

[dependencies.application]
workspace = true

[dependencies.domain]
workspace = true

[dependencies.axum]
version = "0.8.9"

[dependencies.chrono]
version = "0.4.45"
features = ["clock", "std"]
default-features = false

[dependencies.derive_more]
version = "2.1.1"
features = ["constructor"]

[dependencies.headers]
version = "0.4.1"

[dependencies.tokio-util]
version = "0.7.18"
features = ["codec"]

[dependencies.tracing]
version = "0.1.44"

[dev-dependencies.chrono]
version = "0.4.45"
features = ["clock", "std"]
default-features = false

[dev-dependencies.futures]
version = "0.3.33"
default-features = false

[dev-dependencies.mockall]
version = "0.15.0"

[dev-dependencies.pretty_assertions]
version = "1.4.1"

[dev-dependencies.tokio]
version = "1.53.0"
features = ["macros", "rt-multi-thread"]
