[package]
name = "postgres"
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
doctest = false

[features]
tls = ["sqlx/tls-native-tls"]

[dependencies.domain]
workspace = true

[dependencies.async-trait]
version = "0.1.86"

[dependencies.chrono]
version = "0.4.39"
features = ["clock", "std"]
default-features = false

[dependencies.cow-utils]
version = "0.1.3"

[dependencies.derive_more]
version = "2.0.1"
features = ["constructor", "from", "into"]

[dependencies.futures]
version = "0.3.31"
features = ["std"]
default-features = false

[dependencies.log]
version = "0.4.25"

[dependencies.ordermap]
version = "0.5.5"
features = ["serde"]

[dependencies.sea-query]
version = "0.32.1"
features = ["derive", "backend-postgres", "thread-safe"]
default-features = false

[dependencies.sea-query-binder]
version = "0.7.0"
features = ["postgres-array", "sqlx-postgres", "with-chrono", "with-json", "with-uuid"]

[dependencies.serde]
version = "1.0.217"
features = ["derive"]

[dependencies.serde_json]
version = "1.0.138"

[dependencies.serde_with]
version = "3.12.0"

[dependencies.sqlx]
version = "0.8.3"
features = ["chrono", "json", "migrate", "postgres", "runtime-tokio", "uuid"]
default-features = false

[dependencies.sqlx_migrator]
version = "0.16.2"
features = ["postgres"]

[dependencies.uuid]
version = "1.13.1"

[dev-dependencies.include_dir]
version = "0.7.4"

[dev-dependencies.pretty_assertions]
version = "1.4.1"
features = ["unstable"]

[dev-dependencies.test-context]
version = "0.4.1"

[dev-dependencies.tokio]
version = "1.43.0"
features = ["macros", "rt-multi-thread"]
