[package]
name = "postgres"
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
doctest = false

[features]
tls = ["sqlx/tls-native-tls"]

[dependencies.domain]
workspace = true

[dependencies.async-trait]
version = "0.1.89"

[dependencies.chrono]
version = "0.4.42"
features = ["clock", "std"]
default-features = false

[dependencies.cow-utils]
version = "0.1.3"

[dependencies.derive_more]
version = "2.0.1"
features = ["constructor", "from", "into"]

[dependencies.either]
version = "1.15.0"

[dependencies.futures]
version = "0.3.31"
features = ["std"]
default-features = false

[dependencies.ordermap]
version = "0.5.12"
features = ["serde"]

[dependencies.sea-query]
version = "1.0.0-rc.14"
features = ["derive", "backend-postgres", "thread-safe"]
default-features = false

[dependencies.sea-query-sqlx]
version = "0.8.0-rc.9"
features = ["postgres-array", "sqlx-postgres", "with-chrono", "with-json", "with-uuid"]

[dependencies.serde]
version = "1.0.228"
features = ["derive"]

[dependencies.serde_json]
version = "1.0.145"

[dependencies.serde_with]
version = "3.15.0"

[dependencies.sqlx]
version = "0.8.6"
features = ["chrono", "json", "migrate", "postgres", "runtime-tokio", "uuid"]
default-features = false

[dependencies.sqlx_migrator]
version = "0.18.0"
features = ["postgres"]

[dependencies.tracing]
version = "0.1.41"

[dependencies.tracing-futures]
version = "0.2.5"
features = ["futures-03"]

[dependencies.uuid]
version = "1.18.1"

[dev-dependencies.guardian]
version = "1.3.0"

[dev-dependencies.include_dir]
version = "0.7.4"

[dev-dependencies.insta]
version = "1.43.2"
features = ["toml"]

[dev-dependencies.pretty_assertions]
version = "1.4.1"
features = ["unstable"]

[dev-dependencies.sqlformat]
version = "0.5.0"

[dev-dependencies.test-context]
version = "0.4.1"

[dev-dependencies.tokio]
version = "1.48.0"
features = ["macros", "rt-multi-thread"]

[dev-dependencies.tracing-subscriber]
version = "0.3.20"
