[package]
name = "storage"
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
doctest = false

[dependencies.cow-utils]
version = "0.1.3"

[dependencies.domain]
workspace = true

[dependencies.derive_more]
version = "1.0.0"
features = ["constructor", "display"]

[dependencies.futures]
version = "0.3.30"
default-features = false

[dependencies.icu_collator]
version = "1.5.0"

[dependencies.normalize-path]
version = "0.2.1"

[dependencies.tokio]
version = "1.39.2"
features = ["fs", "io-util", "rt-multi-thread"]

[dependencies.tokio-stream]
version = "0.1.15"
features = ["fs"]

[target.'cfg(unix)'.dependencies.libc]
version = "0.2.156"
