[package]
name = "storage"
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
doctest = false

[dependencies.cow-utils]
version = "0.1.3"

[dependencies.domain]
workspace = true

[dependencies.derive_more]
version = "2.1.1"
features = ["display"]

[dependencies.futures]
version = "0.3.31"
features = ["std"]
default-features = false

[dependencies.icu_collator]
version = "2.1.1"

[dependencies.icu_provider]
version = "2.1.1"
features = ["sync"]

[dependencies.normalize-path]
version = "0.2.1"

[dependencies.tokio]
version = "1.48.0"
features = ["fs", "rt-multi-thread"]

[dependencies.tokio-stream]
version = "0.1.17"
features = ["fs"]

[dependencies.tracing]
version = "0.1.44"

[dev-dependencies.icu_locale_core]
version = "2.1.1"

[dev-dependencies.pretty_assertions]
version = "1.4.1"
features = ["unstable"]

[dev-dependencies.tempfile]
version = "3.24.0"

[dev-dependencies.tokio]
version = "1.48.0"
features = ["fs", "io-util", "rt-multi-thread"]
