[package]
name = "thumbnails"
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
doctest = false

[dependencies.application]
workspace = true

[dependencies.domain]
workspace = true

[dependencies.axum]
version = "0.7.7"

[dependencies.derive_more]
version = "1.0.0"
features = ["constructor"]

[dependencies.image]
version = "0.25.5"

[dependencies.tokio]
version = "1.41.0"
features = ["rt-multi-thread"]
