[package]
name = "thumbnails"
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
doctest = false

[dependencies.application]
workspace = true

[dependencies.domain]
workspace = true

[dependencies.axum]
version = "0.8.1"

[dependencies.derive_more]
version = "2.0.1"
features = ["constructor"]

[dependencies.image]
version = "0.25.5"
features = ["bmp", "gif", "jpeg", "png", "webp"]
default-features = false
